--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 <body>
 
   <header class="navbar">
-    <div class="logo">Danvo in a new branch</div>
-    <img src="recursos/logo.png" alt="">
-    <nav class="menu">
-      <a href="#">Features</a>
-      <a href="#">Pricing</a>
-      <a href="#">Testimonials</a>
-      <a href="#" class="btn-signup">Sign Up</a>
-    </nav>
-  </header>
+  <div class="logo">
+    <img src="recursos/logo.png" alt="Logo">
+    Danvo in a new branch
+  </div>
+
+  <nav class="menu">
+    <a href="#">Features</a>
+    <a href="#">Pricing</a>
+    <a href="#">Testimonials</a>
+    <a href="#" class="btn-signup">Sign Up</a>
+  </nav>
+</header>
 
   <section class="hero">
     <div class="texto">
